cmake_minimum_required(VERSION 3.20)
project(HelloTriangle LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(include)

file(GLOB SOURCES 
    "src/*.cpp"
    "src/main.cpp"
)

add_executable(${PROJECT_NAME} ${SOURCES})

find_package(Vulkan REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)

find_package(glfw3 REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE glfw)

target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
